<resources>
    <string name="app_name">CodeReader</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="app_info">App info</string>

    <string name="text_input">Enter the JAN code or scan it from the camera.</string>
    <string name="text_StockChangeHistory_input">Display inventory fluctuation records.\nPlease enter the JAN code or location code.</string>
    <string name="btn_camera">Camera</string>
    <string name="btn_search">Inquiry</string>
    <string name="text_register">Register</string>
    <string name="hint_input_text_jan">JAN code</string>
    <string name="hint_input_text_jan_loc_code">JAN code or Location code</string>

    <string name="dialog_title_permission">Please allow permission</string>
    <string name="dialog_message_camera_permission">Couldn\'t access to camera.\nPlease allow permission from \"App Info\", to code scan</string>
    <string name="dialog_title_select_action">Select action</string>

    <string name="toast_permission_required">Camera permissions are required. If you do not give permission, this app will not work.</string>
    <string name="toast_copy_to_clipboard">Copy to clipboard</string>

    <string name="options_menu_license">Open source licenses</string>
    <string name="options_menu_source_code">Source code</string>
    <string name="options_menu_privacy_policy">Privacy policy</string>
    <string name="options_menu_play_store">Google Play store</string>
    <string name="options_menu_share_this_app">Share this app</string>
    <string name="options_menu_settings">Settings</string>

    <string name="scanning">Scanning…</string>
    <string name="label_format">format:</string>
    <string name="label_type">type:</string>

    <string name="action_copy">copy</string>
    <string name="action_share">share</string>
    <string name="action_open">open</string>
    <string name="action_search">search</string>

    <string name="preference_category_settings">Settings</string>
    <string name="preference_title_darkmode">Darkmode</string>
    <string name="preference_summary_darkmode_on">Turn dark mode on</string>
    <string name="preference_summary_darkmode_off">Turn dark mode off</string>

    <string name="option_switch">Switch Darkmode</string>

    <string name="option_title">Setting</string>
    <string name="Darkmode">Dark Theme ON/OFF</string>
    <string name="theme_explanation">The theme can be switched</string>
    <string name="theme_label">Theme</string>


    <string name="preference_category_information">Information</string>
    <string name="preference_title_version">Version</string>

    <string name="alert_title_confirm">Confirm</string>
    <string name="alert_message_working_back">If you return to the previous screen, the data you are currently working on will be lost. Is it okay?</string>
    <string name="alert_message_register">Complete the current work and send the data.</string>
    <string name="alert_message_product_not_found">Product is not found.</string>
    <string name="alert_message_product_and_location_not_found">Product and Location is not found.</string>

    <string name="increment_minus">-</string>
    <string name="increment_plus">+</string>


    <string name="menuHeader">It is a menu screen</string>
    <string name="menuFooter">Copyright © MOBERO</string>

    <string name="menuLink01">menu01</string>
    <string name="menuLink02">menu02</string>
    <string name="menuLink03">menu03</string>
    <string name="menuLink04">menu04</string>
    <string name="menuLink05">menu05</string>
    <string name="menuLink06">menu06</string>

    <string name="image_Icon">icon01</string>

    <string name="login_header">It is a Login Screen</string>

    <string name="hint_id">id</string>
    <string name="hint_password">password</string>
    <string name="login_message">login</string>
    <string name="newaccount_message">Create a new account</string>
    <string name="loginerror_message">If you forgot your password, click here</string>
    <string name="option_menu">Click here for option screen</string>

    <string name="account_header">Create a new account</string>

    <string name="company_id">company_code</string>
    <string name="hint_company">companyCode</string>

    <string name="user_id">user_code</string>
    <string name="hint_user">userName</string>

    <string name="mailaddress01">company_code</string>
    <string name="hint_mail01">companyCode</string>

    <string name="password01">password</string>
    <string name="hint_password01">password</string>
    <string name="password02">password</string>
    <string name="hint_password02">password(For confirmation)</string>

    <string name="address01">CompanyAddress1</string>
    <string name="hint_address01">CompanyAddress(State / City)</string>
    <string name="address02">CompanyAddressAddress2</string>
    <string name="hint_address02">CompanyAddress(address)</string>
    <string name="address03">CompanyAddressAddress3</string>
    <string name="hint_address03">CompanyAddress(Building name, room number)</string>

    <string name="create_message">New Create</string>
    <string name="category_name_store">Store</string>
    <string name="category_name_ship">Ship</string>
    <string name="category_name_return">Return</string>
    <string name="category_name_stock">Stock</string>
    <string name="func_name_unplanned_store">Unplanned</string>
    <string name="func_name_planned_store">Planned</string>
    <string name="func_name_unplanned_ship">Unplanned</string>
    <string name="func_name_stock_search">Search</string>
    <string name="func_name_StockChangeHistory_search">Search</string>

    <string name="ui">Setting</string>
    <string name="dark_mode_def_value">MODE_NIGHT_FOLLOW_SYSTEM</string>
    <string name="dark_mode">Dark Mode</string>

    <string name="settings">Settings</string>


</resources>
