<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewAccountActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff"
        android:orientation="vertical">

        <TextView
            android:id="@+id/account_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:gravity="center_horizontal"
            android:text="@string/account_header"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="#000000"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/company_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_company"
            android:importantForAutofill="no"
            android:inputType="text"
            />

        <EditText
            android:id="@+id/user_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_user"
            android:importantForAutofill="no"
            android:inputType="text"
            />

        <EditText
            android:id="@+id/mailaddress01"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_mail01"
            android:importantForAutofill="no"
            android:inputType="text"
            />

        <EditText
            android:id="@+id/password01"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password01"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            />

        <EditText
            android:id="@+id/password02"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password02"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            />

        <EditText
            android:id="@+id/address01"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_address01"
            android:importantForAutofill="no"
            android:inputType="text"
            />
        <EditText
            android:id="@+id/address02"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_address02"
            android:importantForAutofill="no"
            android:inputType="text"
            />
        <EditText
            android:id="@+id/address03"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_address03"
            android:importantForAutofill="no"
            android:inputType="text"
            />

        <Button
            android:id="@+id/buttonCreate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#5050f2"
            android:text="@string/create_message"
            android:textColor="#ffffff"
            android:layout_margin="30dp">

        </Button>



    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>