<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff"
        android:orientation="vertical">

        <TextView
            android:id="@+id/login_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:gravity="center_horizontal"
            android:text="@string/login_header"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="#000000"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/idEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_id"
            android:importantForAutofill="no"
             />

        <EditText
            android:id="@+id/passwordEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password"
            android:importantForAutofill="no"
            />


        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#5050f2"
            android:text="@string/login_message"
            android:textColor="#ffffff"
            android:layout_margin="30dp">

        </Button>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/loginerror_message"
            android:textSize="18sp"
            android:gravity="center_horizontal"
            android:textColor="#5050f2"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#ededf2"
            android:text="@string/newaccount_message"
            android:textColor="#5050f2"
            android:layout_margin="30dp">

        </Button>

    </LinearLayout>





</androidx.constraintlayout.widget.ConstraintLayout>